--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.17",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wkx": "^0.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.7",
