Introduce Turf.js to the project and use it for all kinds of client side geospatial calculation

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "girder": "file:../../girder-vue",
     "postcss-import": "^11.1.0",
     "postcss-url": "^7.3.2",
