--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,12 @@
   },
   "dependencies": {
     "@turf/turf": "^5.1.6",
-    "girder": "file:../../girder-vue",
     "postcss-import": "^11.1.0",
     "postcss-url": "^7.3.2",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
-    "resonantgeo": "file:../../resonantgeo",
+    "resonantgeo": "^1.5.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.16",
