--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "@turf/turf": "^5.1.6",
     "postcss-import": "^11.1.0",
     "postcss-url": "^7.3.2",
