--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vtk.js": "^7.3.2",
+    "vue-async-computed": "^3.3.1",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
