--- a/client/package.json
+++ b/client/package.json
@@ -26,11 +26,12 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.7",
-    "@vue/cli-service": "^3.0.0-beta.7",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.7",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.7",
+    "@vue/cli-service": "^3.0.0-rc.7",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
     "> 1%",
