--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.1.0",
     "@turf/turf": "^5.1.6",
+    "colorbrewer": "^1.3.0",
     "jszip": "^3.1.5",
     "postcss-import": "^11.1.0",
     "postcss-url": "^7.3.2",
