--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "resonantgeo": "^1.12.0",
+    "resonantgeoview": "file:resonantgeoview/client",
     "shader-loader": "^1.3.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
