--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
-    "resonantgeo": "git+https://github.com/Kitware/resonantgeo.git#job_click_event",
+    "resonantgeo": "git+https://github.com/Kitware/resonantgeo.git",
     "resonantgeoview": "file:resonantgeoview/client",
     "shader-loader": "^1.3.1",
     "stylus": "^0.54.5",
