--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.1.0",
+    "@girder/components": "git+https://github.com/girder/girder_web_components.git",
     "@turf/turf": "^5.1.6",
     "colorbrewer": "^1.3.0",
     "jszip": "^3.1.5",
@@ -21,7 +22,7 @@
     "shader-loader": "^1.3.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vtk.js": "^7.13.2",
+    "vtk.js": "^8.1.0",
     "vue-async-computed": "^3.3.1",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
