--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "vue-async-computed": "^3.3.1",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
+    "vuetify": "^1.3.8",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
