--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,1 @@
-VUE_APP_API_URL=http://localhost:8080/api/v1
-VUE_APP_GIRDER_URL=http://localhost:8081/girder
-API_PROXY=http://localhost:8081
+VUE_APP_GIRDER_URL=http://localhost:8080
