--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,6 +25,21 @@ services:
       - GIRDER_MONGO_URI=mongodb://mongo:27017/girder
       - GIRDER_ADMIN_USER=${GIRDER_ADMIN_USER}
       - GIRDER_ADMIN_PASS=${GIRDER_ADMIN_PASS}
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbit/
+      - BROKER_CONNECTION_TIMEOUT=2
+
+  worker:
+    build:
+      context: ..
+      dockerfile: docker/worker.Dockerfile
+    image:
+      gitlab.kitware.com:4567/core3d/danesfield-app/danesfield-app-girder-worker:${TAG:-latest}
+    depends_on:
+      - rabbit
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbit/
+      - BROKER_CONNECTION_TIMEOUT=2
+
 
 
 volumes:
