--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,48 +5,9 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongo_db:/data/db
+      - $CONDA_PREFIX/var/lib/mongodb:/data/db
 
   rabbit:
     image: rabbitmq:management
     ports:
       - "5672:5672"
-
-  girder:
-    build:
-      context: ..
-      dockerfile: docker/Dockerfile
-    image: gitlab.kitware.com:4567/core3d/danesfield-app/danesfield-app-girder:${TAG:-latest}
-    depends_on:
-      - mongo
-    ports:
-      - "8080:8080"
-    volumes:
-      - girder_assetstore:/home/assetstore
-      - ${HOST_DATA_PATH}:${HOST_DATA_PATH}
-      - ${HOST_GTOPO30_DATA_PATH}:${HOST_GTOPO30_DATA_PATH}
-    environment:
-      - GIRDER_MONGO_URI=mongodb://mongo:27017/girder
-      - GIRDER_ADMIN_USER=${GIRDER_ADMIN_USER}
-      - GIRDER_ADMIN_PASS=${GIRDER_ADMIN_PASS}
-      - CELERY_BROKER_URL=amqp://guest:guest@rabbit/
-      - BROKER_CONNECTION_TIMEOUT=2
-      - HOST_GTOPO30_DATA_PATH=${HOST_GTOPO30_DATA_PATH}
-
-  worker:
-    build:
-      context: ..
-      dockerfile: docker/worker.Dockerfile
-    image:
-      gitlab.kitware.com:4567/core3d/danesfield-app/danesfield-app-girder-worker:${TAG:-latest}
-    depends_on:
-      - rabbit
-    environment:
-      - CELERY_BROKER_URL=amqp://guest:guest@rabbit/
-      - BROKER_CONNECTION_TIMEOUT=2
-
-
-
-volumes:
-  mongo_db:
-  girder_assetstore:
